Simplified bundling, removed middleware (unnecessary)

--- a/src/index.jade
+++ b/src/index.jade
@@ -1,6 +1,6 @@
 #application(data-reflex-app-state=JSON.stringify(state))
   != body
-  script(type='text/javascript' src="/app.js")
+  script(type='text/javascript' src="/dist/app.js")
   script.
     var Application = require("app");
     Application.start();
