Dynamic bundle url for webpack hot mode

--- a/src/index.jade
+++ b/src/index.jade
@@ -1,5 +1,5 @@
 #application(data-reflex-app-state=JSON.stringify(state))
   != body
-  script(type='text/javascript' src="/#{public}/app.js")
+  script(type='text/javascript' src=bundle)
   script.
     Application.start();
